--- a/index.html
+++ b/index.html
@@ -43,8 +43,32 @@
 
         <!-- Container #2 -->
         <div class="container2">
-            <div>Some random information.</div>
-        </div>
+            <div class="title">Some random information.</div>
 
+            <div class="container2-child">
+
+                <div class="card">
+                    <div class="square"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+
+                <div class="card">
+                    <div class="square"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+
+                <div class="card">
+                    <div class="square"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+
+                <div class="card">
+                    <div class="square"></div>
+                    <div class="text">this is some subtext under an illustration or image</div>
+                </div>
+
+            </div>
+
+        </div>
     </body>
 </html>
