--- a/index.html
+++ b/index.html
@@ -70,5 +70,18 @@
             </div>
 
         </div>
+
+
+        <!-- Container #3 -->
+        <div class="container3">
+
+            <div class="quote">
+                <em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice.</em>
+            </div>
+
+            <div class="author">-Thor, God of Thunder</div>
+
+        </div>
+
     </body>
 </html>
