--- a/index.html
+++ b/index.html
@@ -83,5 +83,24 @@
 
         </div>
 
+
+        <!-- Container #4 -->
+        <div class="container4">
+
+            <div class="blue-box">
+
+                <div class="left-part">
+
+                    <div class="action-text-1">Call to action! It's time!</div>
+                    <div class="action-text-2">Sign up for our product by clicking that button right over there!</div>
+
+                </div>
+
+                <button class="button2">Sign up</button>
+
+            </div>
+
+        </div>
+
     </body>
 </html>
