--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 </div>
 
                 <div class="con1-content2">
-                    <div>this is a placeholder for an image</div>
+                    this is a placeholder for an image
                 </div>
 
             </div>
@@ -43,6 +43,7 @@
 
         <!-- Container #2 -->
         <div class="container2">
+
             <div class="title">Some random information.</div>
 
             <div class="container2-child">
@@ -96,10 +97,16 @@
 
                 </div>
 
-                <button class="button2">Sign up</button>
+                <button class="button2">Sign-up</button>
 
             </div>
 
+        </div>
+
+
+        <!-- Footer -->
+        <div class="footer">
+            Copyright © The Odin Project 2023
         </div>
 
     </body>
